[package]
name = "biosignals"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
edition = "2018"
description = "Biosignal processing demo app"
keywords = ["biosignal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/biosignals.rs"
homepage = "https://github.com/klangner/biosignals.rs"
documentation = "https://docs.rs/biosignal"
readme = "README.md"


[dependencies]
dsp = { path = "../dsp.rs" }
wfdb-rust = "0.3"


[dev-dependencies]
assert_approx_eq = "1.1.0"
gnuplot = "0.0.31"
clap = "2"
criterion = "0.2"