[package]
name = "biosignal"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Library for processing biological signals"
keywords = ["dsp", "signal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/biosignal.rs"
homepage = "https://github.com/klangner/biosignal.rs"
documentation = "https://docs.rs/biosignal.rs"
edition = "2018"

[dependencies]
matfile = "0.2"

